# ndynamics

./: .bazelrc  .clang-format  GEMINI.md  LICENSE  WORKSPACE
assembly/: BUILD.bazel  assembly.h  connection.h  field.h  manifold.h  manifold_test.cc  particle.h  propagator.h  worldline.h
base/: BUILD.bazel  bits.h  bits_test.cc  except_test.cc  except_with_glog.h  except_without_glog.h  initializer.cc  initializer.h  pi.h  resource_loader.cc  resource_loader.h  units.h
calculator/: BUILD.bazel  algebra_options.cc  algebra_options.h  ast_printer.cc  ast_printer.h  interpreter.h  interpreter_diagnostic_test.cc  interpreter_test.cc  interpreter_test_utils.h  main.cc  parser.cc  parser.h  repl.cc  repl.h
control/: BUILD.bazel  pendulum.h  pendulum_test.cc
filesystem/: utils.cc  utils.h  utils_test.cc
gfx/: BUILD.bazel  alignment.h  backend.h  backend_factory.h  buffer.h  build_defs.bzl  camera.cc  camera.h  camera_strings.cc  camera_strings.h  command_buffer.h  compute_backend.h  compute_pipeline.h  diffuse_color.frag.glsl  fence.h  instance.h  light.cc  light.h  light_strings.cc  light_strings.h  material.cc  material.h  material_lighting.frag.glsl  materials.cc  materials.h  math.cc  math.h  math_strings.cc  math_strings.h  math_test.cc  mesh.cc  mesh.h  meshes.cc  meshes.h  model.vert.glsl  pass_through.frag.glsl  pass_through.vert.glsl  phong_illumination.frag.glsl  pipeline_layout.h  render_backend.h  (+13 more)
gfx/vulkan/: BUILD.bazel  vulkan_backend.cc  vulkan_backend.h  vulkan_buffer.cc  vulkan_buffer.h  vulkan_command_buffer.cc  vulkan_command_buffer.h  vulkan_compute_backend.cc  vulkan_compute_backend.h  vulkan_compute_pipeline.cc  vulkan_compute_pipeline.h  vulkan_fence.cc  vulkan_fence.h  vulkan_pipeline_layout.cc  vulkan_pipeline_layout.h  vulkan_render_pass.cc  vulkan_render_pass.h  vulkan_render_pipeline.cc  vulkan_render_pipeline.h  vulkan_shader_module.cc  vulkan_shader_module.h
graphics/: BUILD.bazel  box.h  colors.h  cylinder.h  default_fragment_shader.glsl  default_vertex_shader.glsl  gpu_element.h  graphics_test_utils.h  model.h  offset.h  part_builder.h  part_builder_test.cc  pga_transform_vertex_shader.glsl  revolute_joint.h  rod.h  shader_program.cc  shader_program.h  sphere.h
io/: BUILD.bazel  utils.cc  utils.h
math/: BUILD.bazel  README.md  abs.h  algebra.h  basis_representation.h  bit_basis.h  bit_basis_test.cc  bit_set.h  bit_set_test.cc  bitset.h  bitset_test.cc  bivector_net_test.cc  caley.h  caley_test.cc  canonical_basis_representation.h  cartesian_vector.h  cartesian_vector_test.cc  cayley.h  cayley_entry_calculator.h  cayley_entry_calculator_test.cc  cayley_table_entry.h  cayley_test.cc  cga_geometry.h  cga_geometry_exploration_test.cc  cga_geometry_focused_test.cc  cga_geometry_test.cc  complex.h  complex_svd_test.cc  complex_test.cc  convert.h  convert_test.cc  coordinates.h  forward_euler_test.cc  generic_basis_representation.h  geometry.h  geometry_model.h  geometry_model_test.cc  geometry_model_test_utils.h  geometry_test.cc  integrators.h  (+40 more)
math/testing/: BUILD.bazel  basis_transform.h  bivector.h  pga2d.h  pga3d.h  r000.h  r001.h  r010.h  r011.h  r100.h  r101.h  r110.h  r111.h  r130.h  r200.h  r210.h  r300.h  r310.h  r401.h  r410.h  types.h
sensor/: BUILD.bazel  bus.h  fake_accelerometer.h  fake_accelerometer_test.cc  fake_bus.h  fake_sensors.h  fake_sensors_test.cc  imu_bmi323.h  imu_bmi323_test.cc  measurement_channel.h  measurement_type.h  read_limiters.h  sensor.h  sensors.h
simulation/: BUILD.bazel  accelerometer_sensor_model.h  body.h  body_test.cc  characteristics.h  characterization.h  characterization_test.cc  cube.cc  cube_ui.h  old_cube_ui.h  pendulum.h  pendulum_graph.cc  pendulum_graph_ui.h  pendulum_model.h  pendulum_scene.h  pendulum_test.cc  pendulum_ui.cc  pendulum_ui_model.h  position_model.h  position_ui_model.h  potential.h  sample_fragment_shader.fragmentshader  sample_vertex_shader.vertexshader  sensor_measurement_graph_ui.h
string/: BUILD.bazel  static_string.h  static_string_test.cc  string_utils.h  string_utils_test.cc
testing/: test_temp_directory.cc  test_temp_directory.h  utils.h
time/: BUILD.bazel  time.h
ui/: BUILD.bazel  algebra_options.cc  algebra_options.h  app.cc  app.h  ast_printer.cc  ast_printer.h  data_series.h  demo.cc  direct_render_element.h  grammar.cc  grammar.h  grammar_test.cc  imgui_utils.cc  imgui_utils.h  interpreter.h  interpreter_diagnostic_test.cc  interpreter_test.cc  interpreter_test_utils.h  keyboard_shortcuts.cc  keyboard_shortcuts.h  main.cc  parser.cc  parser.h  repl.cc  repl.h  repl_test.cc  representations.h  scene.h  shader_program.cc  shader_program.h  ui_elements.cc  ui_elements.h  ui_model.h
