cc_library(
    name = "base",
    srcs = select({
        "@platforms//os:none": [
        ],
        "//conditions:default": [
            "initializer.cc",
            "resource_loader.cc",
        ],
    }),
    hdrs =
        select({
            "@platforms//os:none": [
                "except_without_glog.h",
            ],
            "//conditions:default": [
                "except_with_glog.h",
                "initializer.h",
            ],
        }) + [
            "bits.h",
            "except.h",
            "pi.h",
            "resource_loader.h",
            "units.h",
        ],
    defines = select({
        "@platforms//os:none": [
            "PLATFORM_OS_NONE",
        ],
        "//conditions:default": [
        ],
    }),
    visibility = ["//visibility:public"],
    deps = select({
        "@platforms//os:none": [
            "//hal/output",
        ],
        "//conditions:default": [
            "//io",
            "//third_party/gflags",
            "//third_party/glog",
            "@bazel_tools//tools/cpp/runfiles",
        ],
    }),
)

cc_test(
    name = "bits_test",
    srcs = [
        "bits_test.cc",
    ],
    deps = [
        ":base",
        "//third_party/gtest",
    ],
)

cc_test(
    name = "except_test",
    srcs = [
        "except_test.cc",
    ],
    deps = [
        ":base",
        "//third_party/gtest",
    ],
)

cc_test(
    name = "except_without_exceptions_test",
    srcs = [
        "except_test.cc",
    ],
    local_defines = [
        "NO_EXCEPTIONS",
    ],
    deps = [
        ":base",
        "//third_party/gtest",
    ],
)
