load(":build_defs.bzl", "compute_shader_library", "fragment_shader_library", "vertex_shader_library")

cc_library(
    name = "gfx",
    srcs = [
        "math.cc",
        "mesh.cc",
        "vulkan_renderer.cc",
    ],
    hdrs = [
        "math.h",
        "mesh.h",
        "vulkan_renderer.h",
    ],
    data = [
        ":pass_through_fragment",
        ":pass_through_vertex",
        ":render_red",
        ":triangle_shader",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//base",
        "//third_party/glfw",
        "//third_party/glog",
        "//third_party/vulkan",
    ],
)

vertex_shader_library(
    name = "pass_through_vertex",
    srcs = [
        "pass_through.vert.glsl",
    ],
)

vertex_shader_library(
    name = "triangle_shader",
    srcs = [
        "triangle.vert.glsl",
    ],
)

fragment_shader_library(
    name = "render_red",
    srcs = [
        "render_red.frag.glsl",
    ],
)

fragment_shader_library(
    name = "pass_through_fragment",
    srcs = [
        "pass_through.frag.glsl",
    ],
)

cc_binary(
    name = "render_cube",
    srcs = [
        "render_cube.cc",
    ],
    deps = [
        ":gfx",
        "//base",
    ],
)
