load(":build_defs.bzl", "compute_shader_library", "fragment_shader_library", "vertex_shader_library")

cc_library(
    name = "gfx",
    srcs = [
        "math.cc",
        "mesh.cc",
        "vulkan_renderer.cc",
    ],
    hdrs = [
        "alignment.h",
        "instance.h",
        "material.h",
        "math.h",
        "mesh.h",
        "ssbo_buffer.h",
        "vulkan_renderer.h",
    ],
    data = [
        ":debug_shader",
        ":diffuse_color",
        ":model",
        ":triangle_shader",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//base",
        "//third_party/glfw",
        "//third_party/glog",
        "//third_party/vulkan",
    ],
)

vertex_shader_library(
    name = "model",
    srcs = [
        "model.vert.glsl",
    ],
)

vertex_shader_library(
    name = "triangle_shader",
    srcs = [
        "triangle.vert.glsl",
    ],
)

fragment_shader_library(
    name = "debug_shader",
    srcs = [
        "debug.frag.glsl",
    ],
)

fragment_shader_library(
    name = "diffuse_color",
    srcs = [
        "diffuse_color.frag.glsl",
    ],
)

cc_binary(
    name = "render_cube",
    srcs = [
        "render_cube.cc",
    ],
    deps = [
        ":gfx",
        "//base",
        "//third_party/glog",
    ],
)
