load(":build_defs.bzl", "compute_shader_library", "fragment_shader_library", "vertex_shader_library")

cc_library(
    name = "gfx",
    srcs = [
        "camera.cc",
        "camera_strings.cc",
        "math.cc",
        "math_strings.cc",
        "meshes.cc",
        "vulkan_renderer.cc",
        "vulkan_utils.cc",
    ],
    hdrs = [
        "alignment.h",
        "camera.h",
        "camera_strings.h",
        "instance.h",
        "material.h",
        "math.h",
        "math_strings.h",
        "mesh.h",
        "meshes.h",
        "ssbo_buffer.h",
        "ubo_allocator.h",
        "vulkan_renderer.h",
        "vulkan_utils.h",
    ],
    data = [
        ":debug_shader",
        ":diffuse_color",
        ":model",
        ":triangle_shader",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//base",
        "//third_party/glfw",
        "//third_party/glog",
        "//third_party/vulkan",
    ],
)

vertex_shader_library(
    name = "model",
    srcs = [
        "model.vert.glsl",
    ],
)

vertex_shader_library(
    name = "triangle_shader",
    srcs = [
        "triangle.vert.glsl",
    ],
)

fragment_shader_library(
    name = "debug_shader",
    srcs = [
        "debug.frag.glsl",
    ],
)

fragment_shader_library(
    name = "diffuse_color",
    srcs = [
        "diffuse_color.frag.glsl",
    ],
)

cc_binary(
    name = "render_cube",
    srcs = [
        "render_cube.cc",
    ],
    deps = [
        ":gfx",
        "//base",
        "//third_party/gflags",
        "//third_party/glog",
    ],
)
