cc_library(
    name = "graphics",
    srcs = [
        "shader_program.cc",
    ],
    hdrs = [
        "box.h",
        "gpu_element.h",
        "model.h",
        "offset.h",
        "revolute_joint.h",
        "shader_program.h",
        "sphere.h",
    ],
    data = [
        "default_fragment_shader.glsl",
        "default_vertex_shader.glsl",
        "pga_transform_vertex_shader.glsl",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//io",
        "//math",
        "//third_party/glad",
        "//third_party/glfw",
        "//third_party/glog",
    ],
)
