load("//platforms:hex.bzl", "hex")

cc_library(
    name = "math",
    hdrs = [
        "bit_set.h",
        "cayley.h",
        "cayley_entry_calculator.h",
        "convert.h",
        "coordinates.h",
        "geometry.h",
        "integrators.h",
        "multivector.h",
        "multivector_utils.h",
        "state.h",
        "state_view.h",
        "unit_set.h",
        "unitary_op_signs.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//base",
        "//third_party/units",
    ],
)

cc_library(
    name = "testing",
    testonly = True,
    hdrs = [
        "integrators_test_utils.h",
        "multivector_test_utils.h",
        "state_test_utils.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":math",
    ],
)

cc_test(
    name = "bit_set_test",
    srcs = ["bit_set_test.cc"],
    deps = [
        ":math",
        "//third_party/gtest",
    ],
)

cc_test(
    name = "cayley_entry_calculator_test",
    srcs = ["cayley_entry_calculator_test.cc"],
    deps = [
        ":math",
        "//third_party/gtest",
    ],
)

cc_test(
    name = "cayley_test",
    srcs = ["cayley_test.cc"],
    deps = [
        ":math",
        "//third_party/gtest",
    ],
)

cc_test(
    name = "multivector_test",
    srcs = ["multivector_test.cc"],
    deps = [
        ":math",
        ":testing",
        "//third_party/gtest",
    ],
)

cc_test(
    name = "bivector_net_test",
    srcs = ["bivector_net_test.cc"],
    deps = [
        ":math",
        ":testing",
        "//math/testing",
        "//third_party/glog",
        "//third_party/gtest",
    ],
)

cc_test(
    name = "multivector_bivector_net_test",
    srcs = ["multivector_bivector_net_test.cc"],
    deps = [
        ":math",
        ":testing",
        "//math/testing",
        "//third_party/glog",
        "//third_party/gtest",
    ],
)

cc_test(
    name = "multivector_scalability_test",
    srcs = ["multivector_scalability_test.cc"],
    deps = [
        ":math",
        "//third_party/gtest",
    ],
)

cc_test(
    name = "multivector_utils_test",
    srcs = ["multivector_utils_test.cc"],
    deps = [
        ":math",
        ":testing",
        "//third_party/gtest",
    ],
)

cc_test(
    name = "integrators_test",
    srcs = ["integrators_test.cc"],
    deps = [
        ":math",
        ":testing",
        "//third_party/gtest",
    ],
)

cc_test(
    name = "unit_set_test",
    srcs = ["unit_set_test.cc"],
    deps = [
        ":math",
        ":testing",
        "//third_party/gtest",
    ],
)

cc_test(
    name = "geometry_test",
    srcs = ["geometry_test.cc"],
    deps = [
        ":math",
        ":testing",
        "//third_party/gtest",
    ],
)

# cc_test(
#     name = "convert_test",
#     srcs = ["convert_test.cc"],
#     deps = [
#         ":math",
#         ":testing",
#         "//base",
#         "//third_party/glog",
#         "//third_party/gtest",
#     ],
# )
