load("//platforms:hex.bzl", "hex")

cc_library(
    name = "math",
    hdrs = [
        "algebra.h",
        "basis_representation.h",
        "bit_basis.h",
        "bit_set.h",
        "canonical_basis_representation.h",
        "cayley.h",
        "cayley_table_entry.h",
        "geometry_model.h",
        "integrators.h",
        "multivector.h",
        "state.h",
        "unitary_ops.h",
        "vga_model.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//base",
    ],
)

cc_library(
    name = "old_math",
    hdrs = [
        "convert.h",
        "coordinates.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":math",
        "//base",
    ],
)

cc_library(
    name = "testing",
    testonly = True,
    hdrs = [
        "integrators_test_utils.h",
        "multivector_test_utils.h",
        "state_test_utils.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":math",
    ],
)

cc_test(
    name = "bit_set_test",
    srcs = ["bit_set_test.cc"],
    deps = [
        ":math",
        "//third_party/gtest",
    ],
)

cc_test(
    name = "cayley_entry_calculator_test",
    srcs = ["cayley_entry_calculator_test.cc"],
    deps = [
        ":math",
        "//third_party/gtest",
    ],
)

cc_test(
    name = "cayley_test",
    srcs = ["cayley_test.cc"],
    deps = [
        ":math",
        "//third_party/gtest",
    ],
)

cc_test(
    name = "multivector_test",
    srcs = ["multivector_test.cc"],
    deps = [
        ":math",
        ":testing",
        "//third_party/gtest",
    ],
)

cc_test(
    name = "multivector_left_contraction_test",
    srcs = ["multivector_left_contraction_test.cc"],
    deps = [
        ":math",
        ":testing",
        "//third_party/gtest",
    ],
)

cc_test(
    name = "bivector_net_test",
    srcs = ["bivector_net_test.cc"],
    deps = [
        ":math",
        ":testing",
        "//math/testing",
        "//third_party/glog",
        "//third_party/gtest",
    ],
)

# Infrastructure to verify the results of our library match those of the libraries generated by
# bivector.net. For now, it's not clear if their assumptions around the dual operator match ours, or
# how our implementation might be wrong. These tests are marked as manual until we learn enough to
# understand why there are discrepancies.
cc_test(
    name = "multivector_bivector_net_test",
    srcs = ["multivector_bivector_net_test.cc"],
    tags = ["manual"],
    deps = [
        ":math",
        ":testing",
        "//math/testing",
        "//third_party/glog",
        "//third_party/gtest",
    ],
)

cc_test(
    name = "multivector_scalability_test",
    srcs = ["multivector_scalability_test.cc"],
    deps = [
        ":math",
        "//third_party/gtest",
    ],
)

cc_test(
    name = "bit_basis_test",
    srcs = ["bit_basis_test.cc"],
    deps = [
        ":math",
        "//third_party/gtest",
    ],
)

cc_test(
    name = "integrators_test",
    srcs = ["integrators_test.cc"],
    deps = [
        ":math",
        ":testing",
        "//third_party/gtest",
    ],
)
