load("//platforms:hex.bzl", "hex")

cc_library(
    name = "sensor",
    hdrs = [
        "bus.h",
        "measurement_channel.h",
        "measurement_type.h",
        "read_limiters.h",
        "sensor.h",
        "sensors.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//base",
        "//math",
        "//time",
    ],
)

cc_library(
    name = "imu_bmi323",
    hdrs = [
        "imu_bmi323.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":sensor",
        "//base",
        "//math",
        "//time",
    ],
)

cc_library(
    name = "testing",
    hdrs = [
        "fake_bus.h",
        "fake_sensors.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":sensor",
        "//base",
        "//math",
        "//time",
    ],
)

cc_test(
    name = "imu_bmi323_test",
    srcs = ["imu_bmi323_test.cc"],
    deps = [
        ":imu_bmi323",
        ":sensor",
        ":testing",
        "//math",
        "//math:testing",
        "//third_party/gtest",
    ],
)

cc_test(
    name = "fake_sensors_test",
    srcs = ["fake_sensors_test.cc"],
    deps = [
        ":sensor",
        ":testing",
        "//math",
        "//math:testing",
        "//third_party/gtest",
        "//time",
    ],
)
