load("//platforms:hex.bzl", "hex")

cc_library(
    name = "simulation",
    hdrs = [
        "characterization.h",
        "pendulum.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//base",
        "//math",
        "//sensor",
    ],
)

cc_test(
    name = "characterization_test",
    srcs = ["characterization_test.cc"],
    deps = [
        ":simulation",
        "//math",
        "//math:testing",
        "//third_party/gtest",
    ],
)

cc_test(
    name = "pendulum_test",
    srcs = ["pendulum_test.cc"],
    deps = [
        ":simulation",
        "//math",
        "//math:testing",
        "//third_party/gtest",
    ],
)

cc_binary(
    name = "pendulum_graph",
    srcs = ["pendulum_graph.cc"],
    visibility = ["//visibility:public"],
    deps = [
        ":simulation",
        "//base",
        "//math",
        "//sensor",
        "//third_party/glad",
        "//third_party/glfw",
        "//ui",
    ],
)

cc_binary(
    name = "cube",
    srcs = ["cube.cc"],
    data = [
        "sample_fragment_shader.fragmentshader",
        "sample_vertex_shader.vertexshader",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":simulation",
        "//base",
        "//third_party/glad",
        "//third_party/glfw",
        "//ui",
    ],
)
