load("//platforms:hex.bzl", "hex")

cc_library(
    name = "simulation",
    hdrs = [
        "characterization.h",
        "pendulum.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//base",
        "//math",
        "//sensor",
    ],
)

cc_library(
    name = "simulation_ui",
    hdrs = [
        "cube_ui.h",
        "pendulum_graph_ui.h",
    ],
    data = [
        "sample_fragment_shader.fragmentshader",
        "sample_vertex_shader.vertexshader",
    ],
    deps = [
        ":simulation",
        "//base",
        "//math",
        "//third_party/glfw",
        "//third_party/glm",
        "//third_party/imgui",
        "//third_party/implot",
        "//ui",
    ],
)

cc_test(
    name = "characterization_test",
    srcs = ["characterization_test.cc"],
    deps = [
        ":simulation",
        "//math",
        "//math:testing",
        "//third_party/gtest",
    ],
)

cc_test(
    name = "pendulum_test",
    srcs = ["pendulum_test.cc"],
    deps = [
        ":simulation",
        "//math",
        "//math:testing",
        "//third_party/gtest",
    ],
)

cc_binary(
    name = "pendulum_graph",
    srcs = ["pendulum_graph.cc"],
    deps = [
        ":simulation",
        ":simulation_ui",
        "//base",
        "//math",
        "//sensor",
        "//third_party/glad",
        "//third_party/glfw",
        "//ui",
    ],
)

cc_binary(
    name = "cube",
    srcs = ["cube.cc"],
    deps = [
        ":simulation",
        ":simulation_ui",
        "//base",
        "//third_party/glad",
        "//third_party/glfw",
        "//ui",
    ],
)
