load("//platforms:hex.bzl", "hex")

cc_library(
    name = "simulation",
    hdrs = [
        "body.h",
        "characterization.h",
        "pendulum.h",
        "potential.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//base",
        "//math",
        "//sensor",
    ],
)

cc_library(
    name = "simulation_ui",
    hdrs = [
        "accelerometer_sensor_model.h",
        "cube_ui.h",
        "pendulum_graph_ui.h",
        "pendulum_ui_model.h",
        "position_ui_model.h",
        "sensor_measurement_graph_ui.h",
    ],
    data = [
        "sample_fragment_shader.fragmentshader",
        "sample_vertex_shader.vertexshader",
    ],
    deps = [
        ":simulation",
        "//base",
        "//graphics",
        "//math",
        "//third_party/glfw",
        "//third_party/glm",
        "//third_party/imgui",
        "//third_party/implot",
        "//ui",
    ],
)

cc_test(
    name = "characterization_test",
    srcs = ["characterization_test.cc"],
    deps = [
        ":simulation",
        "//math",
        "//math:testing",
        "//third_party/gtest",
    ],
)

cc_test(
    name = "body_test",
    srcs = ["body_test.cc"],
    deps = [
        ":simulation",
        "//base",
        "//math",
        "//math:testing",
        "//third_party/gtest",
    ],
)

cc_test(
    name = "pendulum_test",
    srcs = ["pendulum_test.cc"],
    deps = [
        ":simulation",
        "//math",
        "//math:testing",
        "//third_party/gtest",
    ],
)

cc_binary(
    name = "pendulum",
    srcs = [
        "old_cube_ui.h",
        "pendulum_scene.h",
        "pendulum_ui.cc",
    ],
    deps = [
        ":simulation",
        ":simulation_ui",
        "//base",
        "//math",
        "//sensor",
        "//third_party/glad",
        "//third_party/glfw",
        "//ui",
    ],
)

cc_binary(
    name = "cube",
    srcs = ["cube.cc"],
    deps = [
        ":simulation",
        ":simulation_ui",
        "//base",
        "//third_party/glad",
        "//third_party/glfw",
        "//ui",
    ],
)
