cc_library(
    name = "ui",
    srcs = [
        "algebra_options.cc",
        "ast_printer.cc",
        "grammar.cc",
        "repl.cc",
    ],
    hdrs = [
        "algebra_options.h",
        "ast_printer.h",
        "grammar.h",
        "interpreter.h",
        "repl.h",
        "representations.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//math",
        "//third_party/gflags",
        "//third_party/glog",
        "//third_party/peglib",
    ],
)

cc_binary(
    name = "repl",
    srcs = [
        "main.cc",
    ],
    deps = [
        ":ui",
        "//base",
        "//third_party/glog",
    ],
)
