cc_library(
    name = "ui",
    srcs = [
        "algebra_options.cc",
        "ast_printer.cc",
        "parser.cc",
        "repl.cc",
    ],
    hdrs = [
        "algebra_options.h",
        "ast_printer.h",
        "interpreter.h",
        "parser.h",
        "repl.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//math",
        "//third_party/gflags",
        "//third_party/glog",
        "//third_party/peglib",
    ],
)

cc_binary(
    name = "repl",
    srcs = [
        "main.cc",
    ],
    deps = [
        ":ui",
        "//base",
        "//third_party/glog",
    ],
)

cc_test(
    name = "interpreter_test",
    srcs = [
        "interpreter_test.cc",
    ],
    deps = [
        ":ui",
        "//math",
        "//math:testing",
        "//third_party/gtest",
    ],
)
