cc_library(
    name = "ui",
    srcs = [
        "algebra_options.cc",
        "ast_printer.cc",
        "parser.cc",
        "repl.cc",
    ],
    hdrs = [
        "algebra_options.h",
        "ast_printer.h",
        "interpreter.h",
        "parser.h",
        "repl.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//math",
        "//third_party/gflags",
        "//third_party/glog",
        "//third_party/peglib",
    ],
)

cc_binary(
    name = "repl",
    srcs = [
        "main.cc",
    ],
    deps = [
        ":ui",
        "//base",
        "//third_party/glog",
    ],
)

cc_library(
    name = "interpreter_test_utils",
    testonly = True,
    hdrs = ["interpreter_test_utils.h"],
    deps = [
        ":ui",
        "//math",
        "//math:testing",
        "//third_party/gtest",
    ],
)

cc_test(
    name = "interpreter_test",
    srcs = [
        "interpreter_test.cc",
    ],
    deps = [
        ":interpreter_test_utils",
        ":ui",
        "//math",
        "//math:testing",
        "//third_party/gtest",
    ],
)

cc_test(
    name = "interpreter_diagnostic_test",
    srcs = [
        "interpreter_diagnostic_test.cc",
    ],
    deps = [
        ":interpreter_test_utils",
        ":ui",
        "//math",
        "//math:testing",
        "//third_party/gtest",
    ],
)
