cc_library(
    name = "vulkan",
    srcs = [
        "vulkan_buffer.cc",
        "vulkan_command_buffer.cc",
        "vulkan_compute_backend.cc",
        "vulkan_compute_pipeline.cc",
        "vulkan_fence.cc",
        "vulkan_pipeline_layout.cc",
        "vulkan_shader_module.cc",
    ],
    hdrs = [
        "vulkan_buffer.h",
        "vulkan_command_buffer.h",
        "vulkan_compute_backend.h",
        "vulkan_compute_pipeline.h",
        "vulkan_fence.h",
        "vulkan_pipeline_layout.h",
        "vulkan_shader_module.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//gfx",
    ],
)
