cc_library(
    name = "vulkan",
    srcs = [
        "vulkan_backend.cc",
        "vulkan_buffer.cc",
        "vulkan_command_buffer.cc",
        "vulkan_compute_pipeline.cc",
        "vulkan_fence.cc",
        "vulkan_pipeline_layout.cc",
        "vulkan_render_pass.cc",
        "vulkan_render_pipeline.cc",
        "vulkan_shader_module.cc",
    ],
    hdrs = [
        "vulkan_backend.h",
        "vulkan_buffer.h",
        "vulkan_command_buffer.h",
        "vulkan_compute_pipeline.h",
        "vulkan_fence.h",
        "vulkan_pipeline_layout.h",
        "vulkan_render_pass.h",
        "vulkan_render_pipeline.h",
        "vulkan_shader_module.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//gfx",
    ],
)
